# hazel

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: test.yml
adorad/: Tensor.h  TensorFuncs.h  adorad.h  all.h
adorad/coreten/: CMakeLists.txt
adorad/coreten/core/: MemoryFormat.h  intrusive_ptr.cpp  optional.h
adorad/coreten/macros/: Macros.h
adorad/coreten/memory/: CPUAllocator.cpp  Storage.cpp  Storage.h
adorad/coreten/testing/core/: test_device.cpp
hazel/: CMakeLists.txt  Formatting.h  README.md  TensorBase.h  ___d.cpp
hazel/coreten/String/: StringUtil.h
hazel/coreten/core/: Device.h  MemoryFormat.cpp  intrusive_ptr.h
hazel/coreten/testing/: CMakeLists.txt
hazel/coreten/types/: Types.h
python/: setup.py
python/adorad/: cpu_ops.py  tensor.py
